docs/book/samples/appb/parse_fail.out
error[endpoint]: unhandled err reached main: ""seven" is not an integer"
  born in main at parse_fail.kso:1
