docs/book/samples/appb/parse_fail.kso
print "parsed {to_int "seven"}"
